# hyprstream

./: .dockerignore  .env~  .gitignore  .gitmodules  ACCEPTANCE_CRITERIA.md  ARCHITECTURAL_ANALYSIS.md  ARCHITECTURE.md  CAPABILITIES.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEVELOP.md  Dioxus.toml  Dockerfile  HYPRSTREAM_LLM_FUSION.md  HYPRSTREAM_PAPER_DRAFT.md  IMPLEMENTATION_PLAN.md  INCOMPLETE_FUNCTIONALITY.md  INSTRUCT.md  LICENSE-MIT  OPENVDB_SETUP.md  QUICK_START_IMPLEMENTATION.md  README-Docker.md  README.md  RUNTIME_INTEGRATION_PLAN.md  build-docker.sh  build.rs  build.sh  build_errors.txt  cargo_check_all_features.json  cargo_output.txt  changes.diff  clippy.toml  compile_output.txt  create_metadata.sh  debug_metadata.sh  demo_core  demo_core_functionality.rs  deny.toml  docker-compose.yml  (+15 more)
.cargo/: config.toml
crates/bitsandbytes-sys/: Cargo.toml  README.md  build.rs  wrapper.h
crates/bitsandbytes-sys/examples/: test_quantize.rs
crates/bitsandbytes-sys/src/: bindings.rs  lib.rs
crates/cas-serve/: Cargo.toml
crates/cas-serve/src/: chunker.rs  lib.rs  main.rs  mdb_shard.rs  protocol.rs  shard.rs  store.rs
crates/cas-serve/tests/: e2e_weight_fetch.rs  weight_fetch_lib.rs
crates/chat-core/: Cargo.toml
crates/chat-core/src/: capnp.rs  lib.rs  main.rs
crates/git-xet-filter/: Cargo.toml  README.md  build.rs
crates/git-xet-filter/src/: callbacks.rs  config.rs  error.rs  ffi.rs  filter.rs  gittorrent_storage.rs  lib.rs  runtime.rs  ssh_client.rs  storage.rs
crates/git2db/: CLAUDE.md  Cargo.toml  README.md
crates/git2db/examples/: optimized_worktrees.rs  spike_sha256.rs  worktree_strategies_demo.rs
crates/git2db/proptest-regressions/: security_tests.txt
crates/git2db/src/: auth.rs  branch.rs  callback_config.rs  clone_builder.rs  clone_options.rs  config.rs  config_v2.rs  errors.rs  gittorrent_integration.rs  lfs.rs  lib.rs  manager.rs  references.rs  registration_builder.rs  registry.rs  remote.rs  repo_accessor.rs  repository.rs  repository_handle.rs  security_tests.rs  stage.rs  transaction.rs  transport.rs  transport_registry.rs  utils.rs  xet_filter.rs
crates/git2db/tests/: send_trait_test.rs  test_atomic_worktree.rs  transaction_commit_test.rs  v2_branch_remote.rs  v2_core_operations.rs
crates/gittorrent/: Cargo.toml  README.md
crates/gittorrent/examples/: dht_bootstrap.rs  libp2p_dht_example.rs  p2p_handshake.rs
crates/gittorrent/src/: blobs.rs  daemon.rs  error.rs  lfs_xet.rs  lib.rs  locator.rs  service.rs  types.rs  xet_integration.rs
crates/gittorrent/tests/: dht_bootstrap_test.rs  integration_test.rs  p2p_integration.rs  p2p_integration_test.rs
crates/hyprstream-9p/: Cargo.toml  README.md
crates/hyprstream-9p/examples/: serve_mount_uds.rs
crates/hyprstream-9p/src/: backend.rs  client.rs  dma.rs  lib.rs  mac_seam.rs  memory.rs  mount_backend.rs  msg.rs  protocol.rs  remote_mount.rs  server.rs  session.rs  socket_transport.rs  translator.rs  wanix_mount.rs
crates/hyprstream-9p/tests/: socket_roundtrip.rs  tcp_translator.rs  uds_translator.rs
crates/hyprstream-client/: Cargo.toml  schema
crates/hyprstream-client/src/: lib.rs  wasm_exports.rs
crates/hyprstream-compositor/: Cargo.toml
crates/hyprstream-compositor/src/: background.rs  chrome.rs  layout.rs  lib.rs  render.rs  theme.rs
crates/hyprstream-compositor/tests/: avt_btop.rs
crates/hyprstream-containedfs/: Cargo.toml
crates/hyprstream-containedfs/src/: canonical_root.rs  error.rs  lib.rs  path.rs  pathrs_root.rs  scoped_root.rs  types.rs
crates/hyprstream-crypto/: Cargo.toml
crates/hyprstream-crypto/src/: backend.rs  cose_sign.rs  did_key.rs  hmac.rs  lib.rs  pq.rs
crates/hyprstream-discovery/: Cargo.toml  README.md  build.rs
crates/hyprstream-discovery/schema/: discovery.capnp
crates/hyprstream-discovery/src/: at9p_alias.rs  at9p_resolver.rs  checkpointed_pds.rs  did_anchored.rs  lib.rs  placement_index.rs  podspec.rs  scheduling.rs  service.rs
crates/hyprstream-discovery/tests/: podspec_k8s.rs
crates/hyprstream-flight/: Cargo.toml
crates/hyprstream-flight/src/: client.rs  lib.rs  service.rs
crates/hyprstream-k8s/: Cargo.toml
crates/hyprstream-k8s/crds/: mesh.hyprstream.io_tenantbindings.yaml  models.hyprstream.io_adapters.yaml  serving.hyprstream.io_inferenceservices.yaml
crates/hyprstream-k8s/src/: grant.rs  install.rs  lib.rs  mesh.rs  models.rs  operator.rs  serving.rs  training.rs  vfs.rs
crates/hyprstream-k8s/tests/: offline.rs
crates/hyprstream-ledger/: Cargo.toml
crates/hyprstream-ledger/src/: backend.rs  engine.rs  errors.rs  journal.rs  lib.rs  mem.rs  types.rs
crates/hyprstream-ledger/tests/: proptests.rs
crates/hyprstream-metrics/: Cargo.toml
crates/hyprstream-metrics/src/: aggregation.rs  config.rs  lib.rs
crates/hyprstream-p2p/: Cargo.toml  LICENSE  git-remote-gittorrent.toml
crates/hyprstream-p2p/docs/: git-remote-helper.md
crates/hyprstream-p2p/src/: blobs.rs  daemon.rs  lib.rs  locator.rs  service.rs  types.rs
crates/hyprstream-p2p/tests/: integration_test.rs  locator_r1_invariants.rs
crates/hyprstream-pds/: Cargo.toml
crates/hyprstream-pds/src/: at9p.rs  at9p_alias.rs  at9p_chain.rs  at9p_duplicity.rs  at9p_gate.rs  at9p_login.rs  at9p_resolver.rs  at9p_sign.rs  car.rs  cid.rs  commit.rs  dag_cbor.rs  did_op.rs  event_group.rs  hosted_account.rs  lib.rs  list_record.rs  mst.rs  name_record.rs  record.rs  repo_authority.rs  tid.rs
crates/hyprstream-pds/tests/: e2e_content_addressing.rs  e7_two_node_federation.rs
crates/hyprstream-python/: Cargo.toml
crates/hyprstream-resource/: Cargo.toml
crates/hyprstream-rpc/: Cargo.toml  README.md  build.rs
crates/hyprstream-rpc-build/: Cargo.toml  README.md  build.rs
crates/hyprstream-rpc-derive/: Cargo.toml  README.md
crates/hyprstream-rpc-std/: Cargo.toml  README.md  build.rs
crates/hyprstream-sandbox/: Cargo.toml  README.md
crates/hyprstream-service/: Cargo.toml  README.md
crates/hyprstream-tcl/: Cargo.toml
crates/hyprstream-tui/: Cargo.toml  build.rs  pack-bundle.sh
memstack/: Cargo.toml
memstack/src/: main.rs  storage.rs
(+1385 files in other folders)
