[workspace]
members = [
    "crates/hyprstream",
    "crates/git2db",
    "crates/git-xet-filter",
    "crates/gittorrent",
    "crates/hyprstream-metrics",
    "crates/hyprstream-flight",
    "crates/cas-serve",
    "crates/hyprstream-rpc",
    "crates/hyprstream-rpc-derive",
]
# bitsandbytes-sys is standalone - only built when bnb feature is enabled
exclude = ["crates/bitsandbytes-sys"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "AGPL-3.0"
repository = "https://github.com/hyprstream/hyprstream.git"

[workspace.dependencies]
# Core Git operations
git2 = { version = "0.19", features = ["vendored-libgit2"] }
libgit2-sys = "0.17"
libc = "0.2"

# Async runtime
tokio = { version = "1.43.0", features = ["rt-multi-thread", "signal", "fs", "process", "sync", "time", "macros"] }
tokio-util = { version = "0.7", features = ["rt"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tokio-test = "0.4"
tokio-rustls = "0.26.1"

# Error handling
anyhow = "1.0.95"
thiserror = "1.0"

# Data structures and concurrency
dashmap = "6.0"
parking_lot = "0.12"
lru = "0.16.1"
once_cell = "1.19"

# Path handling and security
safe-path = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.9"

# Configuration management
config = { version = "0.13", features = ["toml", "yaml", "json"] }
toml = "0.8"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "chrono", "json", "registry"] }
tracing-log = "0.2"
tracing-appender = "0.2"
tracing-opentelemetry = { version = "0.31" }

# OpenTelemetry
opentelemetry = { version = "0.30" }
opentelemetry_sdk = { version = "0.30", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.30", features = ["grpc-tonic", "trace"] }
opentelemetry-semantic-conventions = { version = "0.30" }
opentelemetry-stdout = { version = "0.30", features = ["trace"] }

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.9"

# Optional XET large file storage support
data = { git = "https://github.com/huggingface/xet-core", branch = "main" }
cas_client = { git = "https://github.com/huggingface/xet-core", branch = "main" }
cas_object = { git = "https://github.com/huggingface/xet-core", branch = "main" }
cas_types = { git = "https://github.com/huggingface/xet-core", branch = "main" }
chunk_cache = { git = "https://github.com/huggingface/xet-core", branch = "main" }
merklehash = { git = "https://github.com/huggingface/xet-core", branch = "main" }
async-trait = "0.1"

# Optional gittorrent transport support
gittorrent = { path = "crates/gittorrent" }

# Network and HTTP
bytes = "1.9.0"
futures = { version = "0.3.31", features = ["alloc"] }
futures-util = "0.3.31"
pin-project-lite = "0.2"
tonic = { version = "0.12.3", features = ["transport", "codegen", "prost", "tls"] }
rustls = "0.23.1"
rustls-pemfile = "2.1.0"
axum = { version = "0.7", features = ["macros", "tokio"] }
tower-http = { version = "0.6", features = ["trace", "cors", "timeout"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
url = "2.5"
urlencoding = "2.1"

# Data processing
polars = "0.45.1"
sqlparser = "0.39.0"
json-threat-protection = "0.1.1"

# System utilities
nix = "0.27"
users = "0.11"
rlimit = "0.10"
clap = { version = "4.4", features = ["derive", "env"] }
lazy_static = "1.4"
num_cpus = "1.16"
daemonize = "0.5.0"

# Build dependencies
cxx = "1.0"
prost = "0.13"
bincode = "1.3.3"
hex = "0.4"
async-stream = "0.3"

# ML dependencies
rayon = "1.8"
memmap2 = "0.9"
rand = "0.8"
# tch is feature-gated per crate (see crates/hyprstream/Cargo.toml for tch-cpu/tch-cuda/tch-rocm)
tokenizers = { version = "0.22.1", features = ["onig"] }
safetensors = "0.4"
regex = "1.11"
minijinja = { version = "2.12.0", features = ["builtins", "loop_controls"] }
half = "2.6.0"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

# Messaging
tmq = { path = "/home/birdetta/tmq" }  # Local TMQ with XPUB/XSUB support
zmq = "0.10"  # Underlying libzmq bindings

# Cap'n Proto (zero-copy serialization)
capnp = "0.20"
capnp-futures = "0.20"

# Utilities
glob = "0.3"
walkdir = "2.5"
indicatif = "0.17"
fastrand = "2.0"
xdg = "2.5"
blake3 = "1.5"
sha2 = "0.10"  # SHA256 validation for LFS files
shellexpand = "3.1.1"
caps = "0.5"  # Linux capabilities for privilege detection
whoami = "1.5"  # OS username detection

# Cryptography (for signed envelopes, DH key exchange, stream HMAC)
base64 = "0.22"
ed25519-dalek = { version = "2", features = ["rand_core"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
hkdf = "0.12"
hmac = "0.12"
zeroize = { version = "1", features = ["derive"] }
subtle = "2"
p256 = "0.13"  # FIPS mode alternative to X25519

# Dev dependencies
proptest = "1.0"
quickcheck = "1.0"
quickcheck_macros = "1.0"
criterion = "0.5.1"

# NOTE: [patch.crates-io] section removed
# tch backend selection is now handled via features in crates/hyprstream/Cargo.toml:
# - default: tch-cpu (CPU-only)
# - Build with: cargo build --no-default-features --features tch-cuda
# - Build with: cargo build --no-default-features --features tch-rocm

# Build dependencies
[workspace.dependencies.cc]
version = "1.0"

[workspace.dependencies.bindgen]
version = "0.70"

[workspace.dependencies.cxx-build]
version = "1.0"

[workspace.dependencies.pkg-config]
version = "0.3"

[workspace.dependencies.capnpc]
version = "0.20"
