[workspace]
members = [
    "crates/hyprstream",
    "crates/git2db",
    "crates/git-xet-filter",
    "crates/gittorrent",
    "crates/hyprstream-metrics",
    "crates/hyprstream-flight",
    "crates/cas-serve",
    "crates/hyprstream-rpc",
    "crates/hyprstream-rpc-build",
    "crates/hyprstream-rpc-derive",
    "crates/hyprstream-workers",
]
# bitsandbytes-sys is standalone - only built when bnb feature is enabled
exclude = ["crates/bitsandbytes-sys"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "AGPL-3.0"
repository = "https://github.com/hyprstream/hyprstream.git"

[workspace.dependencies]
# Core Git operations (0.20.3 for CVE-2024-24577 fix in libgit2 1.9.2)
git2 = { version = "0.20.3", features = ["vendored-libgit2"] }
libgit2-sys = "0.18"
libc = "0.2"

# Async runtime
tokio = { version = "1.43.0", features = ["rt-multi-thread", "signal", "fs", "process", "sync", "time", "macros"] }
tokio-util = { version = "0.7", features = ["rt"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tokio-test = "0.4"
tokio-rustls = "0.26.1"

# Error handling
anyhow = "1.0.95"
thiserror = "1.0"

# Data structures and concurrency
dashmap = "6.0"
parking_lot = "0.12"
lru = "0.16.1"
once_cell = "1.19"
inventory = "0.3"  # Compile-time registration for services

# Path handling and security
safe-path = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.9"

# Configuration management
config = { version = "0.13", features = ["toml", "yaml", "json"] }
toml = "0.8"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "chrono", "json", "registry"] }
tracing-log = "0.2"
tracing-appender = "0.2"
tracing-opentelemetry = { version = "0.31" }

# OpenTelemetry
opentelemetry = { version = "0.30" }
opentelemetry_sdk = { version = "0.30", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.30", features = ["grpc-tonic", "trace"] }
opentelemetry-semantic-conventions = { version = "0.30" }
opentelemetry-stdout = { version = "0.30", features = ["trace"] }

# Utilities
uuid = { version = "1.0", features = ["v4", "v5", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.9"
which = "7"

# Optional XET large file storage support
# Pinned to git-xet-v0.2.0 for API stability (FileProvider/SeekingOutputProvider removed in main)
data = { git = "https://github.com/huggingface/xet-core", tag = "git-xet-v0.2.0" }
cas_client = { git = "https://github.com/huggingface/xet-core", tag = "git-xet-v0.2.0" }
cas_object = { git = "https://github.com/huggingface/xet-core", tag = "git-xet-v0.2.0" }
cas_types = { git = "https://github.com/huggingface/xet-core", tag = "git-xet-v0.2.0" }
chunk_cache = { git = "https://github.com/huggingface/xet-core", tag = "git-xet-v0.2.0" }
merklehash = { git = "https://github.com/huggingface/xet-core", tag = "git-xet-v0.2.0" }
async-trait = "0.1"

# Optional gittorrent transport support
gittorrent = { path = "crates/gittorrent" }

# OCI registry client
oci-distribution = "0.11"

# Network and HTTP
bytes = "1.9.0"
futures = { version = "0.3.31", features = ["alloc"] }
futures-util = "0.3.31"
pin-project-lite = "0.2"
tonic = { version = "0.12.3", features = ["transport", "codegen", "prost", "tls"] }
rustls = "0.23.1"
rustls-pemfile = "2.1.0"
axum = { version = "0.7", features = ["macros", "tokio"] }
tower-http = { version = "0.6", features = ["trace", "cors", "timeout"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
url = "2.5"
urlencoding = "2.1"

# Data processing
polars = "0.45.1"
sqlparser = "0.39.0"
json-threat-protection = "0.1.1"

# System utilities
nix = { version = "0.27", features = ["process", "signal", "user"] }
users = "0.11"
rlimit = "0.10"
clap = { version = "4.4", features = ["derive", "env"] }
lazy_static = "1.4"
num_cpus = "1.16"
daemonize = "0.5.0"

# Build dependencies
cxx = "1.0"
prost = "0.13"
bincode = "1.3.3"
hex = "0.4"
async-stream = "0.3"

# ML dependencies
rayon = "1.8"
memmap2 = "0.9"
rand = "0.8"
# tch is feature-gated per crate (see crates/hyprstream/Cargo.toml for tch-cpu/tch-cuda/tch-rocm)
tokenizers = { version = "0.22.1", features = ["onig"] }
safetensors = "0.4"
regex = "1.11"
minijinja = { version = "2.12.0", features = ["builtins", "loop_controls"] }
half = "2.6.0"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

# Messaging
tmq = { git = "https://github.com/hyprstream/tmq", branch = "xpubsub" }  # TMQ with XPUB/XSUB support
zmq = "0.10"  # Underlying libzmq bindings
zmq-sys = "0.12"  # Raw libzmq FFI for ZMQ_USE_FD socket option (version matches zmq 0.10's dependency)

# Cap'n Proto (zero-copy serialization)
capnp = "0.20"
capnp-futures = "0.20"

# Utilities
glob = "0.3"
walkdir = "2.5"
indicatif = "0.17"
fastrand = "2.0"
xdg = "2.5"
blake3 = "1.5"
sha2 = "0.10"  # SHA256 validation for LFS files
shellexpand = "3.1.1"
caps = "0.5"  # Linux capabilities for privilege detection
whoami = "1.5"  # OS username detection

# Cryptography (for signed envelopes, DH key exchange, stream HMAC)
base64 = "0.22"
ed25519-dalek = { version = "2", features = ["rand_core"] }
curve25519-dalek = { version = "4", features = ["rand_core"] }  # Ristretto255 DH for stream authentication
hkdf = "0.12"
hmac = "0.12"
zeroize = { version = "1", features = ["derive"] }
subtle = "2"
p256 = { version = "0.13", features = ["ecdh"] }  # FIPS mode alternative (P-256 ECDH)

# Dev dependencies
proptest = "1.0"
quickcheck = "1.0"
quickcheck_macros = "1.0"
criterion = "0.5.1"

# NOTE: [patch.crates-io] section removed
# tch backend selection is now handled via features in crates/hyprstream/Cargo.toml:
# - default: tch-cpu (CPU-only)
# - Build with: cargo build --no-default-features --features tch-cuda
# - Build with: cargo build --no-default-features --features tch-rocm

# Build dependencies
[workspace.dependencies.cc]
version = "1.0"

[workspace.dependencies.bindgen]
version = "0.70"

[workspace.dependencies.cxx-build]
version = "1.0"

[workspace.dependencies.pkg-config]
version = "0.3"

[workspace.dependencies.hyprstream-rpc-build]
path = "crates/hyprstream-rpc-build"

[workspace.dependencies.capnpc]
version = "0.20"

[profile.dev]
debug = "line-tables-only"
split-debuginfo = "unpacked"

[profile.dev.package."*"]
opt-level = 2
debug = false

[profile.release]
lto = "thin"
strip = true

[workspace.lints.rust]
# unsafe_code = "warn"  # Informational only, many FFI calls are necessary
# rust_2018_idioms = { level = "warn", priority = -1 }  # Too noisy with lifetime parameters

[workspace.lints.clippy]
# Correctness
correctness = { level = "deny", priority = -1 }

# Suspicious code
suspicious = { level = "warn", priority = -1 }

# Style and complexity
style = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }

# Panic prevention - use proper error handling
unwrap_used = "deny"
expect_used = "deny"
disallowed_types = "deny"  # See clippy.toml for disallowed types

# Cast safety - allow (64-bit target, ML domain where PyTorch validates dimensions)
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"

# Memory safety
mem_forget = "deny"

# Code quality - cleaner code
cloned_instead_of_copied = "deny"
implicit_clone = "deny"
match_same_arms = "deny"
needless_for_each = "deny"
flat_map_option = "deny"
async_yields_async = "deny"

# Shipping quality - don't ship debug code
todo = "deny"
unimplemented = "deny"
print_stdout = "deny"
print_stderr = "deny"

# Specific useful lints
dbg_macro = "warn"
empty_structs_with_brackets = "warn"
get_unwrap = "warn"
inefficient_to_string = "warn"
macro_use_imports = "warn"
map_flatten = "warn"
or_fun_call = "warn"
redundant_closure_for_method_calls = "warn"
str_to_string = "warn"
trivially_copy_pass_by_ref = "warn"
semicolon_if_nothing_returned = "warn"
# doc_markdown - allow (cosmetic, docs still readable without backticks)
doc_markdown = "allow"
# indexing_slicing - allow (tensor code bounds checked by PyTorch)
indexing_slicing = "allow"
# uninlined_format_args = "warn"  # Disabled - affects generated code
# needless_pass_by_value = "warn"  # Disabled - too many false positives with callback-based APIs

# Allow these (common in async code and ML projects)
too_many_arguments = "allow"
type_complexity = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
unused_async = "allow"  # Often intentional for trait consistency or future use
unnecessary_wraps = "allow"  # Often needed for trait implementations
unused_self = "allow"  # Often needed for trait implementations
field_reassign_with_default = "allow"  # Common pattern in test setup
arc_with_non_send_sync = "allow"  # Sometimes needed for FFI or single-threaded use
