[workspace]
members = [
    "crates/hyprstream",
    "crates/git2db",
    "crates/git-xet-filter",
    "crates/gittorrent",
    "crates/hyprstream-metrics",
    "crates/hyprstream-flight",
    "crates/cas-serve",
    "crates/hyprstream-rpc",
    "crates/hyprstream-service",
    "crates/hyprstream-discovery",
    "crates/hyprstream-rpc-build",
    "crates/hyprstream-rpc-derive",
    "crates/hyprstream-workers",
    "crates/hyprstream-containedfs",
    "crates/waxterm",
    "crates/hyprstream-compositor",
    "crates/hyprstream-tui",
    "crates/hyprstream-vfs",
    "crates/hyprstream-tcl",
    "crates/hyprstream-python",
    "crates/chat-core",
    "crates/hyprstream-rpc-std",
    "crates/hyprstream-9p",
    "crates/hyprstream-pds",
]
# bitsandbytes-sys is standalone - only built when bnb feature is enabled
exclude = ["crates/bitsandbytes-sys"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/hyprstream/hyprstream.git"

[workspace.dependencies]
# Core Git operations (0.20.3 for CVE-2024-24577 fix in libgit2 1.9.2)
git2 = { version = "0.20.3", features = ["vendored-libgit2"] }
libgit2-sys = "0.18"
libc = "0.2"

# Async runtime
tokio = { version = "1.43.0", features = ["rt-multi-thread", "signal", "fs", "process", "sync", "time", "macros"] }
tokio-util = { version = "0.7", features = ["rt", "compat"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tokio-test = "0.4"
tokio-rustls = "0.26.1"

# Error handling
anyhow = "1.0.95"
thiserror = "1.0"

# Data structures and concurrency
dashmap = "6.0"
parking_lot = "0.12"
lru = "0.16.1"
once_cell = "1.19"
inventory = "0.3"  # Compile-time registration for services

# Path handling and security
hyprstream-containedfs = { path = "crates/hyprstream-containedfs" }
safe-path = "0.1"
bitflags = "2.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.9"

# Configuration management
config = { version = "0.13", features = ["toml", "yaml", "json"] }
toml = "0.8"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "chrono", "json", "registry"] }
tracing-log = "0.2"
tracing-appender = "0.2"
tracing-opentelemetry = { version = "0.31" }

# OpenTelemetry
opentelemetry = { version = "0.30" }
opentelemetry_sdk = { version = "0.30", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.30", features = ["grpc-tonic", "trace"] }
opentelemetry-semantic-conventions = { version = "0.30" }
opentelemetry-stdout = { version = "0.30", features = ["trace"] }

# Utilities
uuid = { version = "1.0", features = ["v4", "v5", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.9"
which = "7"

# Optional XET large file storage support
# Pinned to git-xet-v0.2.0 for API stability (FileProvider/SeekingOutputProvider removed in main)
data = { git = "https://github.com/huggingface/xet-core", tag = "git-xet-v0.2.0" }
cas_client = { git = "https://github.com/huggingface/xet-core", tag = "git-xet-v0.2.0" }
cas_object = { git = "https://github.com/huggingface/xet-core", tag = "git-xet-v0.2.0" }
cas_types = { git = "https://github.com/huggingface/xet-core", tag = "git-xet-v0.2.0" }
chunk_cache = { git = "https://github.com/huggingface/xet-core", tag = "git-xet-v0.2.0" }
merklehash = { git = "https://github.com/huggingface/xet-core", tag = "git-xet-v0.2.0" }
async-trait = "0.1"

# Optional gittorrent transport support
gittorrent = { path = "crates/gittorrent" }

# OCI registry client
oci-distribution = "0.11"

# Network and HTTP
bytes = "1.9.0"
futures = { version = "0.3.31", features = ["alloc"] }
futures-util = "0.3.31"
pin-project-lite = "0.2"
tonic = { version = "0.12.3", features = ["transport", "codegen", "prost", "tls"] }
rustls = { version = "0.23.1", features = ["ring"] }
rustls-pemfile = "2.1.0"
rustls-acme = { version = "0.11", features = ["tokio"] }
axum = { version = "0.7", features = ["macros", "tokio"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
tower-http = { version = "0.6", features = ["trace", "cors", "timeout"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
url = "2.5"
urlencoding = "2.1"

# QUIC transport (HTTP/3 + WebTransport + ZMTP over QUIC)
quinn = { version = "0.11", features = ["rustls-ring", "futures-io"] }
rcgen = "0.13"
h3 = { version = "0.0.8", features = ["i-implement-a-third-party-backend-and-opt-into-breaking-changes"] }
h3-quinn = { version = "0.0.10", features = ["datagram"] }
h3-webtransport = "0.1.2"
http = "1"

# Iroh + Media-over-QUIC (Epic #131 — Phase 1 substrate)
# iroh re-exported via web-transport-iroh — match its major to avoid duplicate copies.
# Note: web-transport-iroh 0.5.x pins iroh =1.0.0-rc.0 exactly; co-bump these together.
iroh = { version = "=1.0.0-rc.0", default-features = false, features = ["tls-ring"] }
moq-net = "0.1"
web-transport-iroh = { version = "0.5.1", default-features = false, features = ["ring"] }
web-transport-quinn = { version = "0.11.9", default-features = false, features = ["ring"] }
web-transport-trait = "0.3"
# Stream multiplexer for the UDS transport (`web_transport_trait::Session` over a
# single UnixStream). Already in the lock graph via libp2p/iroh — no new tree.
yamux = "0.13"

# Data processing
polars = "0.45.1"
sqlparser = "0.39.0"
json-threat-protection = "0.1.1"

# System utilities
nix = { version = "0.27", features = ["fs", "process", "signal", "socket", "user"] }
users = "0.11"
rlimit = "0.10"
clap = { version = "4.4", features = ["derive", "env"] }
lazy_static = "1.4"
num_cpus = "1.16"
daemonize = "0.5.0"

# Build dependencies
cxx = "1.0"
prost = "0.13"
bincode = "1.3.3"
hex = "0.4"
async-stream = "0.3"

# ML dependencies
rayon = "1.8"
memmap2 = "0.9"
rand = "0.8"
# tch is feature-gated per crate (see crates/hyprstream/Cargo.toml for tch-cpu/tch-cuda/tch-rocm)
tokenizers = { version = "0.22.1", features = ["onig"] }
safetensors = "0.4"
regex = "1.11"
minijinja = { version = "2.12.0", features = ["builtins", "loop_controls"] }
half = "2.6.0"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

# Cap'n Proto (zero-copy serialization)
# All three crates must track together — generated code from capnpc
# targets specific internal APIs in capnp; mismatched majors break
# RawStructSchema struct construction.
# `unaligned`: read capnp messages directly from network buffers (moq/quinn `Bytes`)
# that can start at any byte offset — required for the zero-copy
# `read_message_from_flat_slice` path on the streaming + RPC planes (otherwise capnp
# errors with UnalignedSegment).
#
# SAFE in Rust — and NOT the same as C++'s `-DCAPNP_ALLOW_UNALIGNED`. The C++ flag only
# disables the alignment *check* and leaves genuine UB (unaligned access is UB in C/C++;
# compilers may emit SIMD / assume a pointer's low bits are zero), which is why capnp's
# author recommends copying into an aligned buffer instead (StackOverflow Q 75006774).
# Rust's `unaligned` feature instead changes the access *mechanism*: each word becomes
# `Raw = [u8; N]` (alignment 1) read via `from_le_bytes(*raw)` (capnp `private/primitive.rs`)
# — the canonical, fully-defined Rust idiom for unaligned reads, with no UB. On x86_64/ARM64
# it lowers to a single hardware unaligned load (~free) and does NOT memcpy or sacrifice
# zero-copy. See PR #330.
capnp = { version = "0.24", features = ["unaligned"] }
capnp-futures = "0.24"

# Utilities
glob = "0.3"
walkdir = "2.5"
indicatif = "0.17"
fastrand = "2.0"
xdg = "2.5"
blake3 = "1.5"
sha2 = "0.10"  # SHA256 validation for LFS files
shellexpand = "3.1.1"
caps = "0.5"  # Linux capabilities for privilege detection
whoami = "1.5"  # OS username detection

# Cryptography (for signed envelopes, DH key exchange, stream HMAC)
base64 = "0.22"
ed25519-dalek = { version = "2", features = ["rand_core", "zeroize"] }
curve25519-dalek = { version = "4", features = ["rand_core"] }  # Ristretto255 DH for stream authentication
hkdf = "0.12"
hmac = "0.12"
zeroize = { version = "1", features = ["derive"] }
subtle = "2"
aes-gcm = "0.10"  # AES-256-GCM for notification broadcast encryption
aes-gcm-siv = "0.11"  # AES-256-GCM-SIV for envelope encryption (nonce-misuse resistant)
p256 = { version = "0.13", features = ["ecdh", "ecdsa"] }  # P-256 ECDH (FIPS) + ECDSA (ES256 DPoP verification)
ml-dsa = "0.1.0-rc.11"  # ML-DSA-65 (FIPS 204) post-quantum signatures
ml-kem = { version = "0.3", features = ["getrandom"] }  # ML-KEM-768 (FIPS 203) post-quantum key encapsulation
# RS256/ES256/EdDSA JWT verification for external OIDC providers + private_key_jwt.
# v10 introduced a pluggable CryptoProvider model (similar to rustls). We pin
# `rust_crypto` to keep the existing all-Rust stack rather than pulling in
# aws-lc-rs (libcrypto C dep).
jsonwebtoken = { version = "10", default-features = false, features = ["rust_crypto"] }
coset = "0.4"       # COSE_Sign1 (RFC 9052) envelope signing
ciborium = "0.2"    # CBOR runtime (external_aad construction)

# Hot-reloading (dev only — zero overhead in release builds)
subsecond = "0.7"

# Dev dependencies
proptest = "1.0"
quickcheck = "1.0"
quickcheck_macros = "1.0"
criterion = "0.5.1"


# NOTE: [patch.crates-io] section removed
# tch backend selection is now handled via features in crates/hyprstream/Cargo.toml:
# - default: tch-cpu (CPU-only)
# - Build with: cargo build --no-default-features --features tch-cuda
# - Build with: cargo build --no-default-features --features tch-rocm

# Build dependencies
[workspace.dependencies.cc]
version = "1.0"

[workspace.dependencies.bindgen]
version = "0.70"

[workspace.dependencies.cxx-build]
version = "1.0"

[workspace.dependencies.pkg-config]
version = "0.3"

[workspace.dependencies.hyprstream-rpc-build]
path = "crates/hyprstream-rpc-build"

[workspace.dependencies.capnpc]
version = "0.24"

[profile.dev]
debug = "line-tables-only"
split-debuginfo = "unpacked"

[profile.dev.package."*"]
opt-level = 2
debug = false

[profile.release]
lto = "thin"
strip = true
codegen-units=4

[workspace.lints.rust]
# unsafe_code = "warn"  # Informational only, many FFI calls are necessary
# rust_2018_idioms = { level = "warn", priority = -1 }  # Too noisy with lifetime parameters

[workspace.lints.clippy]
# Correctness
correctness = { level = "deny", priority = -1 }

# Suspicious code
suspicious = { level = "warn", priority = -1 }

# Style and complexity
style = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }

# Panic prevention - use proper error handling
unwrap_used = "deny"
expect_used = "deny"
disallowed_types = "deny"  # See clippy.toml for disallowed types

# Cast safety - allow (64-bit target, ML domain where PyTorch validates dimensions)
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"

# Memory safety
mem_forget = "deny"

# Code quality - cleaner code
cloned_instead_of_copied = "deny"
implicit_clone = "deny"
match_same_arms = "deny"
needless_for_each = "deny"
flat_map_option = "deny"
async_yields_async = "deny"

# Shipping quality - don't ship debug code
todo = "deny"
unimplemented = "deny"
print_stdout = "deny"
print_stderr = "deny"

# Specific useful lints
dbg_macro = "warn"
empty_structs_with_brackets = "warn"
get_unwrap = "warn"
inefficient_to_string = "warn"
macro_use_imports = "warn"
map_flatten = "warn"
or_fun_call = "warn"
redundant_closure_for_method_calls = "warn"
str_to_string = "warn"
trivially_copy_pass_by_ref = "warn"
semicolon_if_nothing_returned = "warn"
# doc_markdown - allow (cosmetic, docs still readable without backticks)
doc_markdown = "allow"
# indexing_slicing - allow (tensor code bounds checked by PyTorch)
indexing_slicing = "allow"
# uninlined_format_args = "warn"  # Disabled - affects generated code
# needless_pass_by_value = "warn"  # Disabled - too many false positives with callback-based APIs

# Allow these (common in async code and ML projects)
too_many_arguments = "allow"
type_complexity = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
unused_async = "allow"  # Often intentional for trait consistency or future use
unnecessary_wraps = "allow"  # Often needed for trait implementations
unused_self = "allow"  # Often needed for trait implementations
field_reassign_with_default = "allow"  # Common pattern in test setup
arc_with_non_send_sync = "allow"  # Sometimes needed for FFI or single-threaded use
