[package]
name = "memstack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(all(target_arch = "x86_64"))']
rustflags = ["-C", "target-cpu=native", "-C", "target-feature=-prefer-256-bit"]

[dependencies]
arrow = "54.0.0"
arrow-flight = { version = "54.0.0", features = ["cli", "flight-sql-experimental", "tls", "tokio"] }
bytes = "1.9.0"
duckdb = { version = "1.1.1", features = ["bundled"] }
futures = { version = "0.3.31", features = ["alloc"] }
polars = "0.45.1"
tokio = { version = "1.42.0", features = ["macros", "rt", "rt-multi-thread"] }
tokio-rustls = "0.26.1"
tonic = { version = "0.12.3", features = ["transport", "codegen", "prost"] }
async-trait = "0.1"
redis = "0.23"
