[package]
name = "bitsandbytes-sys"
version = "0.1.0"
edition = "2021"
description = "Rust FFI bindings for bitsandbytes quantization library"
license = "MIT"
repository = "https://github.com/hyprstream/hyprstream.git"
keywords = ["quantization", "llm", "cuda", "rocm", "ffi"]
categories = ["external-ffi-bindings", "science"]

[features]
default = []
# Backend selection - only one should be enabled
cuda = []
hip = []
cpu = []

# Generate bindings at build time (requires libclang)
bindgen = ["dep:bindgen"]

# Build bitsandbytes from source (auto-clones from GitHub if needed)
build-from-source = ["dep:git2"]

[dependencies]

[build-dependencies]
bindgen = { version = "0.70", optional = true }
pkg-config = "0.3"
git2 = { version = "0.20.3", optional = true }

[dev-dependencies]
