[package]
name = "cas-serve"
version = "0.1.0"
edition.workspace = true
license = "MIT"
repository.workspace = true
description = "CAS server for stdin/stdout transport - enables XET over SSH"

[lib]
name = "cas_serve"
path = "src/lib.rs"

# NOTE: the identity-agnostic `cas-serve` NDJSON-over-stdio binary was retired in
# #654. Its write core now lives in the library (`CasStore::put_file_bytes`) and
# is reached through the authenticated in-process registry `putBlob` RPC instead
# of an unauthenticated subprocess ingress. Only the library ships now.

[dependencies]
# XET core dependencies.
# `merklehash` provides the spec-defined hashing: BLAKE3 keyed with the global
# DATA_KEY (chunk hash), the Merkle-root xorb hash, and the HMAC'd file hash.
merklehash.workspace = true
# `gearhash` is the exact CDC crate xet-core uses (content-defined chunking via
# the FastCDC rolling hash). Reusing it gives byte-identical chunk boundaries to
# the upstream xet-core `Chunker` (see `chunker.rs`) without dragging the full
# xet_config/xet_runtime/mdb_shard tree into this lightweight crate.
gearhash = "0.1"

# Async runtime
tokio = { workspace = true, features = ["rt-multi-thread", "io-util", "macros", "io-std", "fs"] }

# Byte buffer type for chunk data (reuses the same `bytes` crate xet-core's
# `Chunk` uses).
bytes.workspace = true

# Serialization - protocol types derive serde; base64 encodes shard blobs for
# the NDJSON-safe `Response` wire types (still used by the SSH client backend).
serde = { workspace = true, features = ["derive"] }

# Error handling
thiserror.workspace = true

# Utilities
base64 = "0.22"
dirs = "5.0"
shellexpand = "3.1"

[dev-dependencies]
tempfile.workspace = true
# serde_json is only exercised by the protocol serialization unit tests now that
# the NDJSON binary (its only non-test user) has been retired.
serde_json.workspace = true

[lints]
workspace = true
