[package]
name = "chat-core"
version = "0.1.0"
edition = "2021"
description = "Chat orchestration state machine — token parsing, tool call detection, agentic loop"

[lib]
name = "chat_core"
path = "src/lib.rs"

[[bin]]
name = "chat-core"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
