[package]
name = "git-xet-filter"
version = "0.1.0"
edition.workspace = true
license = "MIT"
repository.workspace = true
description = "XET large file storage filter integration for libgit2"

[dependencies]
# Core Git operations
git2.workspace = true
libgit2-sys.workspace = true
libc.workspace = true

# Async runtime
tokio.workspace = true

# Error handling
thiserror.workspace = true

# Data structures and concurrency
dashmap.workspace = true
once_cell.workspace = true
parking_lot.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Logging
tracing.workspace = true

# Utilities
tempfile.workspace = true

# XET large file storage (all optional, enabled via features)
data = { workspace = true, optional = true }
cas_client = { workspace = true, optional = true }
cas_object = { workspace = true, optional = true }
merklehash = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }

# SSH transport support (optional)
russh = { version = "0.48", optional = true }
russh-keys = { version = "0.48", optional = true }
cas-serve = { path = "../cas-serve", optional = true }
base64 = { version = "0.22", optional = true }
dirs = { version = "5.0", optional = true }

# hyprstream-p2p (formerly gittorrent) P2P transport (optional)
hyprstream-p2p = { path = "../hyprstream-p2p", optional = true }

[dev-dependencies]
tokio-test.workspace = true
tracing-subscriber.workspace = true
tempfile.workspace = true
parking_lot.workspace = true

[features]
default = ["xet-storage"]
# Enable XET large file storage support
xet-storage = ["data", "cas_client", "cas_object", "merklehash", "async-trait"]
# Enable SSH transport for self-hosted CAS servers.
# DORMANT (#654): the remote `cas-serve` binary this backend exec'd over SSH has
# been retired, so `SshStorage` cannot connect to anything today. It still builds
# against the `cas_serve` LIBRARY protocol types and is retained (not deleted)
# pending a repoint at the new dual-stack XET service (epic #654, task #5).
ssh-transport = ["xet-storage", "russh", "russh-keys", "cas-serve", "base64", "dirs"]
# Enable gittorrent P2P transport
gittorrent-transport = ["xet-storage", "hyprstream-p2p"]

[lints]
workspace = true
